menu/static/css/base.css
/**
 * html5doctor.com Reset Stylesheet v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/)
 * Richard Clark (http://richclarkdesign.com)
 * http://cssreset.com
 */
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
    font-family: 'Monda', sans-serif;
}
body {
    line-height:1;
}
article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
    display:block;
}
nav ul {
    list-style:none;
}
blockquote, q {
    quotes:none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}
a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}
/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}
/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000;
    font-style:italic;
    font-weight:bold;
}
del {
    text-decoration: line-through;
}
abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}
table {
    border-collapse:collapse;
    border-spacing:0;
}
/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}
input, select {
    vertical-align:middle;
}

/*
CLEARFIX FOR FLOATED ELEMENTS
*/
/* float clearing for IE6 */
* html .clearfix{
  height: 1%;
  overflow: visible;
}

/* float clearing for IE7 */
*+html .clearfix{
  min-height: 1%;
}

/* float clearing for everyone else */
.clearfix:after{
  clear: both;
  content: ".";
  display: block;
  height: 0;
  visibility: hidden;
  font-size: 0;
}

/*
GENERAL UI
*/

body{
    background: #F5F4F0;
    min-width: 300px;
    box-sizing: border-box;
}

iframe{
    background: #fff;
}


/*
HEADER MENU CSS
*/
header{
    background: #E0DED1;
    padding: 2px 0;
    width: 100%;
    margin: 0 auto;
    color: #2B5B69;
    padding: 25px 0;
    position: relative;
}

menu a, menu a:visited{
    color: #666;
    text-decoration: none;
    text-shadow: #F5F4F0 1px 1px;
}

.home{
    font-size: 36px;
    padding: 0 15px 15px;
    text-align: center;
}

.home a{
    text-decoration: none;
    color: #2B5B69;
}

menu{
    list-style: none;
    text-align: center;
}

menu li{
    margin-right: 15px;
    display: inline-block;
    height: 100%;
    vertical-align: bottom;
}

menu > li a {
    padding: 5px;
}

menu form{
    display: inline-block;
}

menu ul{
    list-style: none;
}

/*
SEARCH BAR
*/

menu form {
    letter-spacing: -3px;
}

menu input, menu button{
    padding-top: 0;
    padding-bottom: 0;
}
menu input{
    height: 21px;
    padding-left: 10px;
    border: 0;
    border-radius: 15px 0 0 15px;
}
menu button{
    /* line-height because height shrinks strangely in IE*/
    line-height: 21px;
    border: 0;
    background: #2B5B69;
    color: #fff;
    cursor: pointer;
    border-radius: 0 15px 15px 0;
}

form p{
    margin: 10px 0;
}


/*
CONTENT BLOCK
*/
.content{
    max-width: 960px;
    margin: 10px auto 0;
}

.content a{
    text-decoration: underline;
    color: #444;
}

.content a:visited{
    color: #444;   
}

.content input[type=text], .content input[type=password]{
    width: 200px;
    border: 1px solid #555;
}

.content label{
    display: inline-block;
    width: 100px;
}

.errorlist{
    list-style: none;
    font-size: 0.8em;
}

.errorlist + p input{
    background: #F7FF9C;
}

@media (min-width: 800px){

}

@media (max-width: 800px){
    menu li {
        display: block;
        padding: 5px 0;
    }
    menu, #content{
        padding: 0 25px;
    }
}

